--- a/dlgr_contrib/frontend_demo/templates/instructions/instruct-ready.html
+++ b/dlgr_contrib/frontend_demo/templates/instructions/instruct-ready.html
@@ -2,18 +2,18 @@
 
 {% block body %}
     <div class="main_div">
-        <hr>
 
-        <p>Simple enough?</p>
-
+        <h2>Well done!</h2>
+        <p>You are qualified to participate in this experiment.</p>
         <hr>
 
         <div>
             <div class="row">
                 <div class="col-xs-10"></div>
                 <div class="col-xs-2">
-                    <button type="button" class="btn btn-success btn-lg" onClick="dallinger.allowExit(); dallinger.goToPage('experiment');">
-                    I'm ready!</button>
+                    <button type="button" class="btn btn-success btn-lg"
+                            onClick="dallinger.allowExit(); dallinger.goToPage('experiment');">
+                    Excellent - I'm ready!</button>
                 </div>
             </div>
         </div>
